data/Application.css
/*
* Copyright (c) 2025 Stella (teamcons on GitHub)
*
* This program is free software; you can redistribute it and/or
* modify it under the terms of the GNU General Public
* License as published by the Free Software Foundation; either
* version 3 of the License, or (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
* General Public License for more details.
*
* You should have received a copy of the GNU General Public
* License along with this program; if not, write to the
* Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
* Boston, MA 02110-1301 USA
*/

/*
Picked: #2c3944d9
Base from wpkelso: #33434eff

@define-color accent_color #33434e;
*/


/* Used in the OrientationsBox for the preview icon */
.rotated * {
    -gtk-icon-transform: rotate(90deg);
}

/* Ruthless way to make the options button flat */
.flat_menu_button .toggle {
    outline: none;
	border: none;
    box-shadow: none;
    background: none;
}

/* Pretty coloured titlebar */
.primary-background {
	background-color: #33434eff;
	color: #FFFFFF;
}

.primary-background .button {
	background-color: @bg_color;
}

/* Pretend the log textview is a console */
.console {
 	background-color: #002B36;
}

/* Used for labels in the popover */
.bold {
 	font-weight: bold;
}

/* Font zooms */
.s20 textview.view {font-size: 20%;}
.s40 textview.view {font-size: 40%;}
.s60 textview.view {font-size: 60%;}
.s80 textview.view {font-size: 80%;}
.s100 textview.view {font-size: 100%;}
.s120 textview.view {font-size: 120%;}
.s140 textview.view {font-size: 140%;}
.s160 textview.view {font-size: 160%;}
.s180 textview.view {font-size: 180%;}
.s200 textview.view {font-size: 200%;}
.s220 textview.view {font-size: 220%;}
.s240 textview.view {font-size: 240%;}
.s260 textview.view {font-size: 260%;}
.s280 textview.view {font-size: 280%;}
.s300 textview.view {font-size: 300%;}
.s320 textview.view {font-size: 320%;}
.s340 textview.view {font-size: 340%;}
.s360 textview.view {font-size: 360%;}
.s380 textview.view {font-size: 380%;}
.s400 textview.view {font-size: 400%;}

/* Devel builds get these. Libadwaita has that too, but we do not use it. */
window.devel {
	border-style: solid;
	border-width: 3px;
	border-color: @warning_color;
}

/* Used by LanguageItem and tracked by DDModel so we can have a heatmap of recently used languages*/

.accent-1 {
    color: mix(@accent_color, @fg_color, 0.27);
}

.accent-2 {
    color: mix(@accent_color, @fg_color, 0.22);
}

.accent-3 {
    color: mix(@accent_color, @fg_color, 0.17);
}

.accent-4 {
    color: mix(@accent_color, @fg_color, 0.12);
}

.accent-5 {
    color: mix(@accent_color, @fg_color, 0.07);
}

